// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of score table, score test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="pagescores__table"
      >
        <caption
          class="title-40"
        >
          Score testing
        </caption>
        <thead>
          <tr
            class="pagescores__topheader"
          >
            <th
              class="title-10"
              scope="col"
            >
              Rank
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Name
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Score
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Median
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Solkoff
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Cumulative
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Cumulative of opposition
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              1
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-1.0"
              scope="row"
            >
              TV's
               
              Max
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              6
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              4
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              2
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-2.0"
              scope="row"
            >
              Bobo
               
              Professor
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              3
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-3.0"
              scope="row"
            >
              TV's
               
              Frank
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              7
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              12
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              4
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-4.0"
              scope="row"
            >
              Mike
               
              Nelson
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              5
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              4
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              6
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              5
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-5.0"
              scope="row"
            >
              Brain
               
              Guy
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              5
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              10
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              6
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-6.0"
              scope="row"
            >
              Clayton
               
              Forrester
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              4
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              5
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              5
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              7
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-7.0"
              scope="row"
            >
              Joel
               
              Robinson
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              4
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              8
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-8.0"
              scope="row"
            >
              Crow T
               
              Robot
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              4
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              9
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-9.0"
              scope="row"
            >
              Cambot
               
              
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              6
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              12
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              10
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-10.0"
              scope="row"
            >
              Jonah
               
              Heston
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              3
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              6
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              11
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-11.0"
              scope="row"
            >
              Tom
               
              Servo
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              4
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              9
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              12
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-12.0"
              scope="row"
            >
              Pearl
               
              Forrester
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              7
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              10
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="1"
              scope="row"
            >
              13
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-13.0"
              scope="row"
            >
              Kinga
               
              Forrester
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              2
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              6
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="pagescores__table"
    >
      <caption
        class="title-40"
      >
        Score testing
      </caption>
      <thead>
        <tr
          class="pagescores__topheader"
        >
          <th
            class="title-10"
            scope="col"
          >
            Rank
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Name
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Score
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Median
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Solkoff
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Cumulative
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Cumulative of opposition
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            1
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-1.0"
            scope="row"
          >
            TV's
             
            Max
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            6
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            4
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            2
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-2.0"
            scope="row"
          >
            Bobo
             
            Professor
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            3
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-3.0"
            scope="row"
          >
            TV's
             
            Frank
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            7
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            12
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            4
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-4.0"
            scope="row"
          >
            Mike
             
            Nelson
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            5
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            4
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            6
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            5
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-5.0"
            scope="row"
          >
            Brain
             
            Guy
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            5
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            10
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            6
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-6.0"
            scope="row"
          >
            Clayton
             
            Forrester
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            4
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            5
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            5
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            7
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-7.0"
            scope="row"
          >
            Joel
             
            Robinson
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            4
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            8
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-8.0"
            scope="row"
          >
            Crow T
             
            Robot
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            4
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            9
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-9.0"
            scope="row"
          >
            Cambot
             
            
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            6
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            12
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            10
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-10.0"
            scope="row"
          >
            Jonah
             
            Heston
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            3
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            6
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            11
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-11.0"
            scope="row"
          >
            Tom
             
            Servo
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            4
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            9
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            12
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-12.0"
            scope="row"
          >
            Pearl
             
            Forrester
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            7
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            10
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="1"
            scope="row"
          >
            13
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-13.0"
            scope="row"
          >
            Kinga
             
            Forrester
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            2
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            6
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            10
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot of score table, simple pairing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="pagescores__table"
      >
        <caption
          class="title-40"
        >
          Simple Pairing
        </caption>
        <thead>
          <tr
            class="pagescores__topheader"
          >
            <th
              class="title-10"
              scope="col"
            >
              Rank
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Name
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Score
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Median
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Solkoff
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Cumulative
            </th>
            <th
              class="title-10"
              scope="col"
            >
              Cumulative of opposition
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="4"
              scope="row"
            >
              1
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-1.0"
              scope="row"
            >
              Clayton
               
              Forrester
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-1.1"
              scope="row"
            >
              Grandy
               
              McMaster
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-1.2"
              scope="row"
            >
              Gypsy
               
              
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-1.3"
              scope="row"
            >
              Newbie
               
              McNewberson
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="table__number pagescores__number pagescores__rank pagescores__row-th"
              rowspan="4"
              scope="row"
            >
              2
            </th>
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-2.0"
              scope="row"
            >
              Crow T
               
              Robot
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-2.1"
              scope="row"
            >
              Joel
               
              Robinson
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-2.2"
              scope="row"
            >
              TV's
               
              Frank
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
          </tr>
          <tr
            class="pagescores__row"
          >
            <th
              class="pagescores__row-th pagescores__playername"
              data-testid="rank-2.3"
              scope="row"
            >
              Tom
               
              Servo
            </th>
            <td
              class="pagescores__number pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              0
            </td>
            <td
              class="pagescores__row-td table__number"
            >
              1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="pagescores__table"
    >
      <caption
        class="title-40"
      >
        Simple Pairing
      </caption>
      <thead>
        <tr
          class="pagescores__topheader"
        >
          <th
            class="title-10"
            scope="col"
          >
            Rank
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Name
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Score
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Median
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Solkoff
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Cumulative
          </th>
          <th
            class="title-10"
            scope="col"
          >
            Cumulative of opposition
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="4"
            scope="row"
          >
            1
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-1.0"
            scope="row"
          >
            Clayton
             
            Forrester
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-1.1"
            scope="row"
          >
            Grandy
             
            McMaster
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-1.2"
            scope="row"
          >
            Gypsy
             
            
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-1.3"
            scope="row"
          >
            Newbie
             
            McNewberson
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="table__number pagescores__number pagescores__rank pagescores__row-th"
            rowspan="4"
            scope="row"
          >
            2
          </th>
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-2.0"
            scope="row"
          >
            Crow T
             
            Robot
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-2.1"
            scope="row"
          >
            Joel
             
            Robinson
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-2.2"
            scope="row"
          >
            TV's
             
            Frank
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
        </tr>
        <tr
          class="pagescores__row"
        >
          <th
            class="pagescores__row-th pagescores__playername"
            data-testid="rank-2.3"
            scope="row"
          >
            Tom
             
            Servo
          </th>
          <td
            class="pagescores__number pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            0
          </td>
          <td
            class="pagescores__row-td table__number"
          >
            1
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
